# macropad-sequencer

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: board.rs  debounced_button.rs  display.rs  key_leds.rs  macros.rs  main.rs  rotary_encoder.rs  sequencer_timer.rs  toggle_with_hold.rs  usb.rs
src/menus/: mod.rs  render.rs  sequencer.rs  step.rs
src/tasks/: buttons.rs  controls.rs  display.rs  lights.rs  mod.rs  rotary.rs  sequencer.rs  usb_midi.rs
