[package]
edition = "2024"
rust-version = "1.85.0"
name = "macropad"
version = "0.1.0"
authors = ["Eric Wood <eric@ericwood.org>"]
resolver = "2"

[dependencies]
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-time = { version = "0.5.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.9.0", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp2040",
] }
embassy-futures = { version = "0.1.2" }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-usb-logger = { version = "0.5.1" }
usbd-hid = "0.9.0"

defmt = "1.0.1"
defmt-rtt = "1.1.0"
fixed = "1.29.0"
fixed-macro = "1.2.0"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
futures = { version = "0.3.31", default-features = false, features = [
  "async-await",
  "cfg-target-has-atomic",
  "unstable",
] }
heapless = "0.9.2"

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0" }
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
embedded-storage = { version = "0.3" }
static_cell = "2.1.1"
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
log = "0.4.28"
pio-proc = "0.3.0"
pio = "0.3.0"
rand = { version = "0.9.2", default-features = false }
ws2812-spi = "0.5.1"
smart-leds = "0.4.0"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
sh1106 = { version = "0.5.0", features = ["graphics"] }
sb-rotary-encoder = "0.1.0"
midi-convert = "0.2.0"
usbd-midi = "0.5.0"

[profile.release]
debug = true

# Below configs are here to mute the rust-analyzer error.
# "Can't find crate for 'test'" as this is a no_std project
[[bin]]
name = "macropad"
test = false
bench = false
